--- a/app/globals.css
+++ b/app/globals.css
@@ -2,20 +2,104 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+@font-face {
+  font-family: Poppins;
+  src: url(../public/assets/fonts/Poppins/Poppins-Regular.ttf);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+@font-face {
+  font-family: PoppinsHeading;
+  src: url(../public/assets/fonts/Poppins/Poppins-SemiBold.ttf);
+}
+
+@font-face {
+  font-family: Open_Sans;
+  src: url(../public/assets/fonts/Open_Sans/OpenSans-VariableFont_wdth\,wght.ttf);
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Poppins;
+}
+.drop-shadow {
+  filter: drop-shadow(5px 6px 14px #000000);
+}
+
+/* Infinite Rotate Animation */
+@keyframes spin-slow {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
   }
 }
 
+.animate-spin-slow {
+  animation: spin-slow 3s linear infinite;
+}
+
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  height: 100%;
+  overflow: hidden;
+}
+.buttons {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  right: 10px;
+  bottom: 10px;
+  z-index: -1;
+}
+.buttons button {
+  border: none;
+  background: rgba(0, 0, 0, 0.02);
+  border-radius: 5px;
+  cursor: pointer;
+}
+.buttons button:hover {
+  background: rgba(0, 0, 0, 0.04);
+}
+.buttons #top {
+  position: absolute;
+  top: 0%;
+  left: 50%;
+}
+
+.top-layer {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 400;
+  top: -100%;
+  left: 0;
+  bottom: auto;
+  right: auto;
+  background: #111111;
+  transition: all 0.9s cubic-bezier(0.6, 0.05, 0.4, 1);
+}
+.top-layer.active {
+  top: 100%;
+}
+.top-layer--2 {
+  background: #111111;
+  transition-delay: 0.6s;
+}
+.top-layer--3 {
+  background: #4169e1;
+  transition-delay: 0.4s;
+}
+.top-layer--4 {
+  background: #c06c84;
+  transition-delay: 0.2s;
+}
+.top-layer--5 {
+  background: #8a2be2;
+  transition-delay: 0.1s;
+}
+
+.abt {
+  color: rgba(255, 255, 255, 0.07);
 }
